<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="match_parent"  
    android:layout_height="wrap_content"  
    android:orientation="horizontal" >
    
    <RelativeLayout  
  		android:id="@+id/pullrefresh_listview_head"
  		android:layout_width="fill_parent"  
  		android:layout_height="wrap_content"
  		android:paddingRight="22sp"
  		android:paddingLeft="22sp" >
  		<!-- 箭头图像、进度条 -->  
  		<FrameLayout  
  			android:layout_width="wrap_content"  
  			android:layout_height="wrap_content"
  			android:layout_centerVertical="true">
			<!-- 箭头 -->  
  			<ImageView
			  	android:id="@+id/head_arrowImageView"
			  	android:contentDescription="@string/imageview_description"
				android:layout_width="wrap_content"  
			  	android:layout_height="wrap_content"  
			  	android:layout_gravity="center"  
			  	android:src="@drawable/arrow_down"
			  	android:visibility="visible"/>
  			<!-- 进度条 -->  

  			<ProgressBar
  			    android:id="@+id/head_progressBar"
  			    android:layout_width="wrap_content"
  			    android:layout_height="wrap_content"
  			    android:layout_gravity="center"
  			    android:visibility="gone" />

  		</FrameLayout>
  		
  		<!-- 提示、最近更新 -->  
  		<LinearLayout  
  			android:layout_width="wrap_content"  
  			android:layout_height="wrap_content"  
  			android:layout_centerHorizontal="true"  
  			android:orientation="vertical"  
  			android:gravity="center_horizontal">
  			<!-- 提示 -->  
  		<TextView
  			android:id="@+id/head_tipsTextView"
  			android:layout_width="wrap_content" 
  			android:layout_height="wrap_content"
  			android:text="@string/pullrefresh_tips_text"
  			android:textSize="15sp"/>

  		<TextView
  		    android:id="@+id/head_lastUpdatedTextView"
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content"
  		    android:text="@string/pullrefresh_update_text"
  		    android:textSize="12sp" />

  		</LinearLayout>  
  		<!-- 最近更新 -->
	</RelativeLayout>
  
</LinearLayout>